png to webp for speed

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </div>
     <br>
     <div class="screenshot-container">
-        <img src="./content/screenshot4.png" alt="Screenshot 1" class="screenshot">
-        <img src="./content/screenshot1.png" alt="Screenshot 2" class="screenshot">
-        <img src="./content/screenshot2.png" alt="Screenshot 3" class="screenshot">
-        <img src="./content/screenshot3.png" alt="Screenshot 4" class="screenshot">
+        <img src="./content/screenshot4.webp" alt="Screenshot 1" class="screenshot">
+        <img src="./content/screenshot1.webp" alt="Screenshot 2" class="screenshot">
+        <img src="./content/screenshot2.webp" alt="Screenshot 3" class="screenshot">
+        <img src="./content/screenshot3.webp" alt="Screenshot 4" class="screenshot">
     </div>
 
     
