--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <div class="logo">
                     <img src="./content/Logo2.png" alt="Sigils of Fate Logo" class="logo-img" >
                 </div>
+
+                <p class="desc">A turn-based 1v1 battler where mythological heroes clash using runes drawn from a shuffle bag. Strategically place runes to form unique shapes—like Tetris—to trigger powerful abilities. Each hero has distinct valid shapes and game-changing effects, making every match a mind-bending duel of wits and combos!</p>
                 <div id="mc_embed_signup">
                 <form action="https://gmail.us7.list-manage.com/subscribe/post?u=d68b80da10ae4882e055ce69e&amp;id=23eaf59469&amp;f_id=0079a3e3f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
                         <div id="mc_embed_signup_scroll"><h2>Subscribe!</h2>
@@ -36,16 +38,15 @@
                     </div>
                 </form>
                 </div>
+                <div class="screenshot-container">
+                    <img src="./content/screenshot4.webp" alt="Screenshot 1" class="screenshot">
+                    <img src="./content/screenshot1.webp" alt="Screenshot 2" class="screenshot">
+                    <img src="./content/screenshot2.webp" alt="Screenshot 3" class="screenshot">
+                    <img src="./content/screenshot3.webp" alt="Screenshot 4" class="screenshot">
+                </div>
                 </div>
     </div>
     <br>
-    <div class="screenshot-container">
-        <img src="./content/screenshot4.webp" alt="Screenshot 1" class="screenshot">
-        <img src="./content/screenshot1.webp" alt="Screenshot 2" class="screenshot">
-        <img src="./content/screenshot2.webp" alt="Screenshot 3" class="screenshot">
-        <img src="./content/screenshot3.webp" alt="Screenshot 4" class="screenshot">
-    </div>
-
     
 
     <script type="text/javascript" src="./index.js"></script>
