--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="mc_embed_signup">
                 <form action="https://gmail.us7.list-manage.com/subscribe/post?u=d68b80da10ae4882e055ce69e&amp;id=23eaf59469&amp;f_id=0079a3e3f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
                         <div id="mc_embed_signup_scroll"><h2>Subscribe!</h2>
-                            <p>Join our mailing list to receive news, updates and play-tests!</p>
+                            <p>Join our mailing list to receive news, updates and play-testing opportunities!</p>
                         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                         <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-FNAME" id="name-label">Name <span class="asterisk">*</span></label><input type="text" name="FNAME" class="required text" id="mce-FNAME" required="" value=""></div>
                 <div hidden=""><input type="hidden" name="tags" value="7196181"></div>
