--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sigils of Fate</title>
+    <link rel="icon" type="image/x-icon" href="./content/logo.ico">
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     <div class="logo-container">
