added character section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                     </div>
                 </form>
                 </div>
+
+                <h1  class="heading">Characters</h1>
+                <div class="characters-container">
+                    <div class="character">
+                        <div class="subheading">Hypnos</div> <div class="char-desc">Greek god of sleep and dreams. Hypnos relies on slows and speed stats to make his enemies unable to play slowly killing his foe. </div><br>
+                        <img src="./content/characters/Hypnos.png" alt="Hypnos" class="character-img"> 
+                    </div>
+                    <div class="character">
+                        <div class="subheading">Phraya Nak</div> <div class="char-desc">Phraya Nak, a water serpent who guards sacred places. They say the more heads she has the more powerful she is. She is a tank relying on heals to keep her alive while enemies exhaust themselves</div><br>
+                        <img src="./content/characters/Naga.png" alt="Hypnos" class="character-img"> 
+                    </div>
+                </div>
+
+                <h1 class="heading">Screenshots</h1>
                 <div class="screenshot-container">
                     <img src="./content/screenshot4.webp" alt="Screenshot 1" class="screenshot">
                     <img src="./content/screenshot1.webp" alt="Screenshot 2" class="screenshot">
