--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="optionalParent">
                             <div class="clear foot">
                                 <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                                <button type="button" id="mc-embedded-subscribe" class="button" onclick="window.location.href='https://discord.gg/KuweArup7s';">Join the Discord Server</button>
+                                <!-- <button type="button" id="mc-embedded-subscribe" class="button" onclick="window.location.href='https://discord.gg/KuweArup7s';">Join the Discord Server</button> -->
                             </div>
                          </div>
                     </div>
