--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                         <div class="subheading">Phraya Nak</div> <div class="char-desc">Phraya Nak, a water serpent who guards sacred places. They say the more heads she has the more powerful she is. She is a tank relying on heals to keep her alive while enemies exhaust themselves</div><br>
                         <img src="./content/characters/Naga.png" alt="Hypnos" class="character-img"> 
                     </div>
+                    <div class="character">
+                        <div class="subheading">Fenrir</div> <div class="char-desc">Fenrir, the monstrous wolf born of Loki and Angrboða, is destined to bring about Ragnarok with his untamed fury. Bound by the gods in chains, he waits for the day he will break free, unleashing destruction and devouring Odin himself.</div><br>
+                        <img src="./content/characters/Fenrir.png" alt="Hypnos" class="character-img fenrir"> 
+                    </div>
                 </div>
 
                 <h1 class="heading">Screenshots</h1>
